--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "angular": "^1.6.6"
   },
   "devDependencies": {
+    "express": "^4.16.2",
+    "serve-index": "^1.9.1",
     "webpack": "^3.8.1"
   }
 }
