--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "angular": "^1.6.6"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "serve-index": "^1.9.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   }
 }
