--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass-loader": "^6.0.6",
     "serve-index": "^1.9.1",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0"
   }
 }
