--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.13",
     "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
+    "eslint-config-google": "^0.9.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-loader": "^0.5.1",
