--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-loader": "^0.5.1",
+    "karma": "^1.7.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^2.0.5",
     "node-sass": "^4.5.3",
+    "phantomjs-prebuilt": "^2.1.15",
     "sass-loader": "^6.0.6",
     "serve-index": "^1.9.1",
     "style-loader": "^0.19.0",
