--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular": "^1.6.6"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-angularjs-annotate": "^0.8.2",
@@ -26,6 +27,7 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-loader": "^0.5.1",
+    "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
